--- a/site/templates/twig/code-tables/min/iwhm/edit/form/input-whse.twig
+++ b/site/templates/twig/code-tables/min/iwhm/edit/form/input-whse.twig
@@ -10,6 +10,7 @@
 					'input': {
 						'name': name,
 						'value': value,
+						'addclasses': ['whse-input'],
 						'attributes': {
 							'placeholder': '',
 							'aria-label':  label
