--- a/site/templates/twig/code-tables/mar/mtm/.js.twig
+++ b/site/templates/twig/code-tables/mar/mtm/.js.twig
@@ -37,48 +37,23 @@ $(function() {
 		});
 	});
 
+	$("body").on("change", "input[name=freight_tax_code]", function(e) {
+		$('.freight-tax.description').text('');
+		var input = $(this);
+		if (input.val() == '') {
+			return false;
+		}
+		server.getCode(input.val(), function(code) {
+			if (code) {
+				$('.freight-tax.description').text(code.description);
+			}
+		});
+	});
+
 /* =============================================================
 	Lookup Modal Functions
+	ajax modal events is handled by scripts/code-tables/ajax-modal.js
 ============================================================= */
-	ajaxModal.on('show.bs.modal', function (event) {
-		var button = $(event.relatedTarget); // Button that triggered the modal
-		var modal = $(this);
-		modal.attr('data-input', button.data('input'));
-
-		modal.find('.modal-title').text(button.attr('title'));
-		modal.resizeModal('xl');
-		modal.find('.modal-body').loadin(button.data('lookupurl'), function() {});
-	});
-
-	$("body").on('click', '.code-link', function(e) {
-		e.preventDefault();
-		var button = $(this);
-		var modal  = button.closest('.modal');
-		var input  = $(modal.attr('data-input'));
-		input.val(button.data('code'));
-		if (input.data('jqv')) {
-			input.change();
-		}
-		modal.modal('hide');
-	});
-
-	$("body").on('submit', '#ajax-modal form', function(e) {
-		e.preventDefault();
-		var form = $(this);
-		var query = form.serialize();
-		var action = form.attr('action');
-		var search = form.find('input[name=q]').val();
-		var url = action + '?' + query;
-		form.closest('.modal').find('.modal-title').text('Searching for ' + search);
-		form.closest('.modal').find('.modal-body').loadin(url, function() {});
-	});
-
-	$("body").on('click', '#ajax-modal .paginator-link', function(e) {
-		e.preventDefault();
-		var button = $(this);
-		var modal  = button.closest('.modal');
-		modal.find('.modal-body').load(button.attr('href'));
-	});
 
 
 /* =============================================================
