Add sort ability

--- a/site/templates/twig/api/lookup/customers/list.twig
+++ b/site/templates/twig/api/lookup/customers/list.twig
@@ -10,23 +10,23 @@
 	<thead>
 		<tr>
 			<th scope="col">
-				<a href="{{ page.get_sortURL('custID') }}" class="link">ID</a>
+				<a href="{{ page.get_sortURL('custID') }}" class="link sort">ID</a>
 			</th>
 			<th scope="col">
-				<a href="{{ page.get_sortURL('name') }}" class="link">Name</a>
+				<a href="{{ page.get_sortURL('name') }}" class="link sort">Name</a>
 			</th>
 			<th scope="col">Address</th>
 			<th scope="col">
-				<a href="{{ page.get_sortURL('city') }}" class="link">City</a>
+				<a href="{{ page.get_sortURL('city') }}" class="link sort">City</a>
 			</th>
 			<th scope="col">
-				<a href="{{ page.get_sortURL('state') }}" class="link">State</a>
+				<a href="{{ page.get_sortURL('state') }}" class="link sort">State</a>
 			</th>
 			<th scope="col">
-				<a href="{{ page.get_sortURL('zip') }}" class="link">Zip</a>
+				<a href="{{ page.get_sortURL('zip') }}" class="link sort">Zip</a>
 			</th>
 			<th scope="col">
-				<a href="{{ page.get_sortURL('lastsaledate') }}" class="link">Last Sales Date</a>
+				<a href="{{ page.get_sortURL('lastsaledate') }}" class="link sort">Last Sales Date</a>
 			</th>
 		</tr>
 	</thead>
