--- a/site/templates/twig/code-tables/mar/crcd/form/custid.twig
+++ b/site/templates/twig/code-tables/mar/crcd/form/custid.twig
@@ -8,7 +8,8 @@
 					'name': 'custid',
 					'attributes': {
 						'placeholder': '',
-						'aria-label':  'Customer ID'
+						'aria-label':  'Customer ID',
+						'data-jqv': 'true'
 					}
 				},
 				'button': {
