FIX: skip trimming space when validating / getting codes

--- a/site/templates/twig/code-tables/list-print.twig
+++ b/site/templates/twig/code-tables/list-print.twig
@@ -62,7 +62,7 @@
 		<tbody>
 			{% for code in codes %}
 				{% block code_row %}
-					<tr data-code="{{ code.code }}" class="{{ (response.key == code.code and response.hasSuccess() ) ? 'bg-success text-white' : ''}}">
+					<tr data-code="{{ code.code }}" class="{{ (response.key is same as(code.code) and response.hasSuccess() ) ? 'bg-success text-white' : ''}}">
 						{% block code_columns %}
 							<td>{{ code.code }}</td>
 							<td>{{ code.description }}</td>
