--- a/site/templates/twig/code-tables/list.twig
+++ b/site/templates/twig/code-tables/list.twig
@@ -107,7 +107,7 @@
 	{% endblock %}
 	{% for code in codes %}
 		{# data-code attribute and class code is for the highlight on close #}
-		<div id="code-{{ code.code|urlencode }}" data-code="{{ code.code }}" class="list-group-item code pb-1 pt-1 {{ (response.key == code.code and response.hasSuccess() ) ? 'bg-success text-white' : ''}}">
+		<div id="code-{{ code.code|urlencode }}" data-code="{{ code.code }}" class="list-group-item code pb-1 pt-1 {{ (response.key is same as(code.code) and response.hasSuccess()) ? 'bg-success text-white' : ''}}">
 			{% block code_row %}
 				<div class="row align-items-center">
 					<div class="col-3 col-sm-3">
