--- a/site/templates/twig/code-tables/mar/trm/list.twig
+++ b/site/templates/twig/code-tables/mar/trm/list.twig
@@ -34,7 +34,7 @@
 	</div>
 	{% for code in codes %}
 		{# data-code attribute and class code is for the highlight on close #}
-		<div id="{{ code.code|urlencode }}" data-code="{{ code.code }}" class="list-group-item code pb-1 pt-1 {{ (response.key == code.code and response.has_success() ) ? 'bg-success text-white' : ''}}">
+		<div id="{{ code.code|urlencode }}" data-code="{{ code.code }}" class="list-group-item code pb-1 pt-1 {{ (response.key is same as(code.code) and response.has_success() ) ? 'bg-success text-white' : ''}}">
 			<div class="row align-items-center">
 				<div class="col-1">
 					{{ code.code }}
