--- a/site/templates/twig/code-tables/optm/sysop/list/list.twig
+++ b/site/templates/twig/code-tables/optm/sysop/list/list.twig
@@ -32,8 +32,8 @@
 		{% endif %}
 
 		{% for code in codes %}
-			{% set class = code.id == input.get.text('focus') ? 'highlight' : '' %}
-			{% set class = optm.getRecordlockerKey(code) == response.key ? 'bg-success text-white' : class %}
+			{% set class = code.id == input.get.string('focus') ? 'highlight' : '' %}
+			{% set class = optm.getRecordlockerKey(code) is same as(response.key) ? 'bg-success text-white' : class %}
 
 			<tr data-id="{{ code.id }}" class="code {{ class }}">
 				<td>{{ code.id }}</td>
