--- a/site/templates/twig/code-tables/mar/crcd/list.twig
+++ b/site/templates/twig/code-tables/mar/crcd/list.twig
@@ -50,8 +50,8 @@
 {% for code in codes %}
 	{% block code_row %}
 		<div class="row align-items-center">
-			<div class="col-sm-1">
-				{{ code.code }}
+			<div class="col-sm-1 font-monospace">
+				{{ code.code|replace({' ': '&nbsp;'})|raw }}
 			</div>
 			<div class="col-sm-3">
 				{{ code.description }}
