--- a/site/templates/twig/code-tables/map/vtm/list.twig
+++ b/site/templates/twig/code-tables/map/vtm/list.twig
@@ -38,8 +38,8 @@
 {% for code in codes %}
 	{% block code_row %}
 		<div class="row align-items-center">
-			<div class="col-sm-2">
-				{{ code.code }}
+			<div class="col-sm-2 font-monospace">
+				{{ code.code|replace({' ': '&nbsp;'})|raw }}
 			</div>
 			<div class="col-sm-4">
 				{{ code.description }}
