--- a/site/templates/twig/code-tables/mar/cpm/list.twig
+++ b/site/templates/twig/code-tables/mar/cpm/list.twig
@@ -2,10 +2,10 @@
 
 {% block list_header_row %}
 	<div class="row align-items-center">
-		<div class="col-sm-3">
+		<div class="col-sm-1">
 			Code
 		</div>
-		<div class="col-sm-3">
+		<div class="col-sm-4">
 			Description
 		</div>
 		<div class="col-sm-1">
@@ -14,7 +14,7 @@
 		<div class="col-sm-2 text-right">
 			Percent
 		</div>
-		<div class="col-sm-3 text-center">
+		<div class="col-sm-4 text-center">
 			{% if page.is_print() == false %}
 				<button type="button" class="btn btn-light btn-sm" data-toggle="modal" data-target="#edit-code-modal" data-code="" data-description="">
 					<i class="fa fa-plus" aria-hidden="true"></i> Add Code
@@ -27,10 +27,10 @@
 {% for code in codes %}
 	{% block code_row %}
 		<div class="row align-items-center">
-			<div class="col-sm-3">
-				{{ code.code }}
+			<div class="col-sm-1 font-monospace">
+				{{ code.code|replace({' ': '&nbsp;'})|raw }}
 			</div>
-			<div class="col-sm-3">
+			<div class="col-sm-4">
 				{{ code.description }}
 			</div>
 			<div class="col-sm-1">
@@ -39,7 +39,7 @@
 			<div class="col-sm-2 text-right">
 				{{ code.surcharge == 'Y' ? code.percent ~ '%' : '' }}
 			</div>
-			<div class="col-sm-3 text-center">
+			<div class="col-sm-4 text-center">
 				{% if page.is_print() == false %}
 					<button type="button" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#edit-code-modal" data-code="{{ code.code }}" data-description="{{ code.description }}" data-json="{{ manager.codeJson(code)|json_encode }}">
 						<i class="fa fa-pencil" aria-hidden="true"></i> Edit
