--- a/site/templates/twig/code-tables/mar/tm/list-print.twig
+++ b/site/templates/twig/code-tables/mar/tm/list-print.twig
@@ -35,7 +35,9 @@
 {% for code in codes %}
 	{% block code_row %}
 		<tr>
-			<td>{{ code.code }}</td>
+			<td>
+				<span class="text-monospace">{{ code.code|replace({' ': '&nbsp;'})|raw }}</span>
+			</td>
 			<td>{{ code.description }}</td>
 			<td></td>
 			<td></td>
