--- a/site/templates/twig/code-tables/mar/trm/list.twig
+++ b/site/templates/twig/code-tables/mar/trm/list.twig
@@ -36,8 +36,8 @@
 		{# data-code attribute and class code is for the highlight on close #}
 		<div id="{{ code.code|urlencode }}" data-code="{{ code.code }}" class="list-group-item code pb-1 pt-1 {{ (response.key is same as(code.code) and response.has_success() ) ? 'bg-success text-white' : ''}}">
 			<div class="row align-items-center">
-				<div class="col-1">
-					{{ code.code }}
+				<div class="col-1 font-monospace">
+					{{ code.code|replace({' ': '&nbsp;'})|raw }}
 				</div>
 				<div class="col-3">
 					{{ code.description }}
