--- a/site/templates/twig/code-tables/min/igm/list-print.twig
+++ b/site/templates/twig/code-tables/min/igm/list-print.twig
@@ -39,7 +39,9 @@
 
 {% for code in codes %}
 	{% block code_columns %}
-		<td>{{ code.code }}</td>
+		<td>
+			<span class="text-monospace">{{ code.code|replace({' ': '&nbsp;'})|raw }}</span>
+		</td>
 		<td>{{ code.description }}</td>
 		<td>{{ code.sales }}</td>
 		<td>{{ code.credit }}</td>
