--- a/site/templates/twig/code-tables/min/iwhm/list.twig
+++ b/site/templates/twig/code-tables/min/iwhm/list.twig
@@ -22,7 +22,7 @@
 	{% block code_row %}
 		<div class="row align-items-center">
 			<div class="col-sm-3">
-				{{ code.code }}
+				{{ code.code|replace({' ': '&nbsp;'})|raw }}
 			</div>
 			<div class="col-sm-6">
 				{{ code.name }}
