--- a/site/templates/twig/code-tables/optm/sysop/list/list.twig
+++ b/site/templates/twig/code-tables/optm/sysop/list/list.twig
@@ -36,7 +36,7 @@
 			{% set class = optm.getRecordlockerKey(code) is same as(response.key) ? 'bg-success text-white' : class %}
 
 			<tr data-id="{{ code.id }}" class="code {{ class }}">
-				<td>{{ code.id }}</td>
+				<td>{{ code.id|replace({' ': '&nbsp;'})|raw }}</td>
 				<td>{{ code.description }}</td>
 				<td class="text-right">
 					{% if input.get.offsetExists('print') == false %}
