--- a/site/templates/twig/code-tables/js/classes/Alerts.js.twig
+++ b/site/templates/twig/code-tables/js/classes/Alerts.js.twig
@@ -9,10 +9,12 @@ class CodeAlerts extends Alerts {
 	}
 
 	codeExists(code, callback) {
+		var html = 'Edit Code <span class="font-monospace font-weight-bold text-underlined">' + code.replace(' ', '&nbsp;') + '</span>?';
+
 		swal2.fire({
 			title: 'Code Exists',
-			text: 'Edit Code ' + code + '?',
 			icon: 'question',
+			html: html,
 			showCancelButton: true,
 			confirmButtonText: 'Yes'
 		}).then(function (result) {
