RQST: move clear search button before toolbar

--- a/site/templates/twig/items/cxm/.new/customers/toolbar.twig
+++ b/site/templates/twig/items/cxm/.new/customers/toolbar.twig
@@ -9,15 +9,15 @@
 			<i class="fa fa-undo" aria-hidden="true"></i> Back to Maintenance
 		</a>
 	</div>
-	<div class="col-sm-3"></div>
-
-	<div class="col-sm-6">
-		{% include 'items/cxm/.new/customers/form.twig' %}
-
+	<div class="col-sm-3 text-right">
 		{% if input.get.text('q') %}
-			<a href="{{ input.url() }}" class="btn btn-warning mt-2">
+			<a href="{{ input.url() }}" class="btn btn-warning">
 				<i class="fa fa-times"></i> Clear Search
 			</a>
 		{% endif %}
+	</div>
+
+	<div class="col-sm-6">
+		{% include 'items/cxm/.new/customers/form.twig' %}
 	</div>
 </div>
