--- a/site/templates/twig/customers/customer-list.twig
+++ b/site/templates/twig/customers/customer-list.twig
@@ -35,8 +35,8 @@
 			{% for customer in customers %}
 				<tr>
 					<td scope="row">
-						<a href="{{ input.url() ~ '?custID=' ~ customer.id }}" class="link ci-customer customer-link" data-custid="{{ customer.id }}" data-cust_name="{{ customer.name }}" >
-							<strong>{{ customer.id }}</strong>
+						<a href="{{ input.url() ~ '?custID=' ~ customer.id }}" class="link ci-customer customer-link text-monospace" data-custid="{{ customer.id }}" data-cust_name="{{ customer.name }}" >
+							<strong>{{ customer.id|replace({' ': '&nbsp;'})|raw }}</strong>
 						</a>
 					</td>
 					<td class="{{ datamatcher.string(customer.name, q) ? 'highlight' : '' }}">
