--- a/site/templates/twig/items/ii/bread-crumbs.twig
+++ b/site/templates/twig/items/ii/bread-crumbs.twig
@@ -18,7 +18,7 @@
 				</a>
 			</li>
 			<li class="breadcrumb-item active">
-				{{ input.get.text('custID') }}
+				{{ input.get.string('custID') }}
 			</li>
 		{% else %}
 			<li class="breadcrumb-item active">
