--- a/site/templates/twig/quotes/customer/search-form.twig
+++ b/site/templates/twig/quotes/customer/search-form.twig
@@ -2,9 +2,9 @@
 
 <div class="mb-4 row">
 	<div class="col-sm-6">
-		<a href="{{ page.ciShiptoUrl(input.get.text('custID'), input.get.text('shiptoID')) }}" class="btn btn-primary">
+		<a href="{{ page.ciShiptoUrl(input.get.string('custID'), input.get.text('shiptoID')) }}" class="btn btn-primary">
 			<i class="fa fa-user-circle-o text-white" aria-hidden="true"></i>
-			View {{ values.offsetExists('shiptoID') ? values.text('shiptoID') : values.text('custID') }}
+			View {{ values.offsetExists('shiptoID') ? values.text('shiptoID') : values.string('custID') }}
 		</a>
 	</div>
 	<div class="col-sm-6">
@@ -17,7 +17,7 @@
 		<div class="card-body">
 			<form action="{{ input.url() }}" method="get" class="remove-empty-fields" submit-empty="false">
 				<input type="hidden" name="filter" value="filter">
-				<input type="hidden" name="custID" value="{{ values.text('custID') }}">
+				<input type="hidden" name="custID" value="{{ values.string('custID') }}">
 				<input type="hidden" name="shiptoID" value="{{ values.text('shiptoID') }}">
 
 				<div class="row mt-3">
@@ -97,7 +97,7 @@
 					{% if input.get.text('filter') %}
 						<div class="col-sm-12 form-group">
 							<div>
-								<a href="{{ page.custQuotesUrl(values.text('custID'), values.text('shiptoID')) }}" class="btn btn-warning btn-block">
+								<a href="{{ page.custQuotesUrl(values.string('custID'), values.text('shiptoID')) }}" class="btn btn-warning btn-block">
 									Clear Search <i class="fa fa-search-minus" aria-hidden="true"></i>
 								</a>
 							</div>
