--- a/site/templates/twig/sales-orders/customer/search-form.twig
+++ b/site/templates/twig/sales-orders/customer/search-form.twig
@@ -1,7 +1,7 @@
 <div class="mb-4 row">
 	<div class="col-sm-6">
-		<a href="{{ page.ciUrl(input.get.text('custID')) }}" class="btn btn-info">
-			CI: {{ input.get.text('custID') }}
+		<a href="{{ page.ciUrl(input.get.string('custID')) }}" class="btn btn-info">
+			CI: {{ input.get.string('custID') }}
 		</a>
 	</div>
 	<div class="col-sm-6">
