--- a/site/templates/twig/customers/ci/customer/panels/quotes.twig
+++ b/site/templates/twig/customers/ci/customer/panels/quotes.twig
@@ -15,7 +15,7 @@
 		{% include 'quotes/customer/quotes-list.twig' %}
 
 		<div class="card-footer bg-secondary">
-			<a href="{{ page.quoteListUrl(input.get.text('custID'), input.get.text('shiptoID')) }}" class="text-white">
+			<a href="{{ page.quoteListUrl(input.get.string('custID'), input.get.text('shiptoID')) }}" class="text-white">
 				View More Quotes
 				<i class="fa fa-sign-in" aria-hidden="true"></i>
 			</a>
