--- a/site/templates/twig/customers/ci/customer/panels/sales-orders.twig
+++ b/site/templates/twig/customers/ci/customer/panels/sales-orders.twig
@@ -15,7 +15,7 @@
 		{% include 'sales-orders/customer/sales-order-list.twig' %}
 
 		<div class="card-footer bg-secondary">
-			<a href="{{ page.orderListUrl(input.get.text('custID')) }}" class="text-white">View More Sales Orders <i class="fa fa-sign-in" aria-hidden="true"></i></a>
+			<a href="{{ page.orderListUrl(input.get.string('custID')) }}" class="text-white">View More Sales Orders <i class="fa fa-sign-in" aria-hidden="true"></i></a>
 		</div>
 	</div>
 </div>
