--- a/site/templates/twig/items/cxm/.new/customer/xrefs/toolbar.twig
+++ b/site/templates/twig/items/cxm/.new/customer/xrefs/toolbar.twig
@@ -5,13 +5,13 @@
 
 <div class="row">
 	<div class="col-sm-3">
-		<a href="{{ page.custListUrl(values.text('custID')) }}" class="btn btn-primary">
+		<a href="{{ page.custListUrl(values.string('custID')) }}" class="btn btn-primary">
 			<i class="fa fa-undo" aria-hidden="true"></i> Back to {{ input.urlSegmentLast()|upper }}
 		</a>
 	</div>
 	<div class="col-sm-3 text-right">
 		{% if input.get.text('q') %}
-			<a href="{{ page.custUrl(input.get.text('custID')) }}" class="btn btn-warning">
+			<a href="{{ page.custUrl(input.get.string('custID')) }}" class="btn btn-warning">
 				<i class="fa fa-times"></i> Clear Search
 			</a>
 		{% endif %}
