--- a/site/templates/twig/items/cxm/cxm-links.twig
+++ b/site/templates/twig/items/cxm/cxm-links.twig
@@ -2,6 +2,6 @@
 
 <div class="mb-3">
 	{% if values.offsetExists('custitemID') %}
-		<a href="{{ page.custUrl(values.text('custID')) }}" class="btn btn-primary"> View Customer {{ page.custID }}</a>
+		<a href="{{ page.custUrl(values.string('custID')) }}" class="btn btn-primary"> View Customer {{ page.custID }}</a>
 	{% endif %}
 </div>
