--- a/site/templates/twig/items/cxm/search/customer/results.twig
+++ b/site/templates/twig/items/cxm/search/customer/results.twig
@@ -2,7 +2,7 @@
 	{% include 'items/cxm/search/customer/form.twig' %}
 
 	{% if input.get.text('q') %}
-		<a href="{{ page.custUrl(input.get.text('custID')) }}" class="btn btn-warning mt-2">
+		<a href="{{ page.custUrl(input.get.string('custID')) }}" class="btn btn-warning mt-2">
 			<i class="fa fa-times"></i> Clear Search
 		</a>
 	{% endif %}
