--- a/site/templates/twig/mar/armain/pty3/customer-accounts/display.twig
+++ b/site/templates/twig/mar/armain/pty3/customer-accounts/display.twig
@@ -12,7 +12,7 @@
 					<i class="fa fa-print" aria-hidden="true"></i> Print
 				</button>
 			{% else %}
-				<a href="{{ page.pty3Url(input.get.text('custID')) }}" class="btn btn-primary">
+				<a href="{{ page.pty3Url(input.get.string('custID')) }}" class="btn btn-primary">
 					<i class="fa fa-undo" aria-hidden="true"></i> Back <span class="d-none d-sm-inline">to PTY3</span>
 				</a>
 				&nbsp;
@@ -27,13 +27,13 @@
 					<div class="d-flex justify-content-between flex-wrap">
 						{% if input.get.text('q') != '' %}
 							<div class="order-2 order-sm-1 flex-grow-1 mt-1">
-								<a href="{{ page.pty3CustUrl(input.get.text('custID')) }}" class="btn btn-warning">
+								<a href="{{ page.pty3CustUrl(input.get.string('custID')) }}" class="btn btn-warning">
 									<i class="fa fa-times" aria-hidden="true"></i> Clear Search
 								</a>
 							</div>
 						{% endif %}
 
-						<form action="{{ page.pty3CustUrl(input.get.text('custID')) }}" method="GET" class="allow-enterkey-submit column-filter flex-grow-1 order-1 order-sm-2">
+						<form action="{{ page.pty3CustUrl(input.get.string('custID')) }}" method="GET" class="allow-enterkey-submit column-filter flex-grow-1 order-1 order-sm-2">
 							<div class="input-group">
 								<div class="input-group-btn search-panel">
 									<div class="dropdown">
