--- a/site/templates/twig/items/cxm/new-cxm-modal.twig
+++ b/site/templates/twig/items/cxm/new-cxm-modal.twig
@@ -2,13 +2,13 @@
 	<div class="modal-dialog modal-lg" role="document">
 		<div class="modal-content">
 			<div class="modal-header">
-				<h4 class="modal-title" id="new-cxm-modal-label">Insert X-Ref</h4>
+				<h4 class="modal-title" id="new-cxm-modal-label">Insert X-Ref Customer</h4>
 				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 					<span aria-hidden="true">&times;</span>
 				</button>
 			</div>
 			<div class="modal-body">
-				<form action="{{ input.url() }}" method="get" id="new-cxm-form">
+				<form action="{{ input.url() }}" method="GEt" id="new-cxm-form">
 					<div class="form-group">
 						<label for="newcustID">Customer ID</label>
 						{% include 'util/bootstrap/form/input-group.twig' with {
